--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "homepage": "https://github.com/C4stleB/CloneCoding_Wetube#readme",
   "dependencies": {
+    "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "autoprefixer": "^9.8.1",
+    "aws-sdk": "^2.713.0",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -32,6 +35,7 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -45,10 +49,19 @@
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' ",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack",
-    "tunnel": "lt -h http://serverless.social -p 4000"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss' ",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
+    "tunnel": "lt -h http://serverless.social -p 4000",
+    "copyAll": "cp -rf src/static build; cp -rf src/views build",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "prebuild": "rm -rf build",
+    "start": "node build/init.js",
+    "prestart": "npm run build",
+    "winBuild": "npm run build:server && npm run build:assets",
+    "winCopyAll": "cp -R -fo src/static build; cp -R -fo src/views build",
+    "winRemoveOld": "rm -R -fo build"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
